--- a/views/homepage.html
+++ b/views/homepage.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="homepage.css" rel="stylesheet" type="text/css">
+    <link href="css/homepage.css" rel="stylesheet" type="text/css">
     <title>Website4MyMomsBusiness</title>
 </head>
 <body>
     <div>
 
         <header>
-            <img class="logo" src="sdwlogo.jpg" alt="logo">
+            <img class="logo" src="imgs/sdwlogo.jpg" alt="logo">
             <nav>
                 <ul class="navlink">
                     <li><a href="#">Services</a></li>
