--- a/public/css/homepage.css
+++ b/public/css/homepage.css
@@ -61,10 +61,11 @@ button:hover{
     background-color: rgba(0, 136, 169, 0.8);
 }
 .mainpage{
-    width: 1100px;
+    width: 70%;
     height: 550px;
     background-color: white;
-    margin-top: 50px;
+    margin-top: 45px;
     margin-left: 15%;
     border-radius: 7%;
+    margin-right: 15%;
 }
