--- a/views/homepage.html
+++ b/views/homepage.html
@@ -13,7 +13,7 @@
             <img class="logo" src="imgs/sdwlogo.jpg" alt="logo">
             <nav>
                 <ul class="navlink">
-                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Stores</a></li>
                     <li><a href="#">Projects</a></li>
                     <li><a href="#">About</a></li>
                 </ul>
@@ -21,7 +21,7 @@
             <a class="cta" href="#"><button>Contact</button></a>
         </header>
         <div class="mainpage">
-
+            <!--TODO  -->>
         </div>
     </div>
     
