--- a/views/homepage.html
+++ b/views/homepage.html
@@ -13,9 +13,9 @@
             <img class="logo" src="imgs/sdwlogo.jpg" alt="logo">
             <nav>
                 <ul class="navlink">
-                    <li><a href="#">Stores</a></li>
+                    <li><a href="/store">Stores</a></li>
                     <li><a href="#">Projects</a></li>
-                    <li><a href="#">About</a></li>
+                    <li><a href="/contactus">contactus</a></li>
                 </ul>
             </nav>
             <a class="cta" href="#"><button>Contact</button></a>
