--- a/views/homepage.html
+++ b/views/homepage.html
@@ -21,6 +21,12 @@
             <a class="cta" href="#"><button>Contact</button></a>
         </header>
         <div class="mainpage">
+
+            <div class="mainpage2">
+            </div>
+            <div class="mainpage3">
+            </div>
+            
             <!--TODO  -->>
         </div>
     </div>
