--- a/views/homepage.html
+++ b/views/homepage.html
@@ -10,12 +10,12 @@
     <div>
 
         <header>
-            <img class="logo" src="imgs/sdwlogo.jpg" alt="logo">
+            <img class="logo" src="imgs/sdwlogo.png" alt="logo">
             <nav>
                 <ul class="navlink">
                     <li><a href="/store">Stores</a></li>
                     <li><a href="#">Projects</a></li>
-                    <li><a href="/contactus">contactus</a></li>
+                    <li><a href="/contactus">Contact Us</a></li>
                 </ul>
             </nav>
             <a class="cta" href="#"><button>Contact</button></a>
@@ -23,6 +23,7 @@
         <div class="mainpage">
 
             <div class="mainpage2">
+                <img class="dttimg" src="imgs/dtt.png">
             </div>
             <div class="mainpage3">
             </div>
