--- a/public/css/homepage.css
+++ b/public/css/homepage.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    background-color: black;
+    background-color: rgb(3, 3, 23);
 }
 .mainpage{
     align-items: center;
@@ -23,7 +23,7 @@ header{
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    padding: 10px 10%;
+    padding: 25px 10%;
 }
 .logo{
     cursor: pointer;
@@ -66,18 +66,25 @@ button:hover{
     background-color: white;
     margin-top: 45px;
     margin-left: 15%;
-    border-radius: 7%;
+    border-radius: 20px;
     margin-right: 15%;
+    overflow: hidden;
 }
 .mainpage2{
-    width: 50%;
+    width: 40%;
     height: inherit;
-    background-color: blue;
+    background-color: ;
     float: right;
 }
 .mainpage3{
-    width: 50%;
+    width: 60%;
     height: inherit;
     background-color: blueviolet;
     float: left;
+}
+.dttimg{
+    cursor: pointer;
+    max-width: 83%;
+    max-height: 83%;
+    margin: 8% 0 0 20%;
 }
