--- a/views/homepage.html
+++ b/views/homepage.html
@@ -24,8 +24,11 @@
 
             <div class="mainpage2">
                 <img class="dttimg" src="imgs/dtt.png">
+                <p>Client's Happiness Is Our Goal</p>
             </div>
             <div class="mainpage3">
+                <p>We are sending and delivering our products to every towns in Myanmar. 
+                Contact us fast and we will transfer our products to every clients whitin a week. </p>
             </div>
             
             <!--TODO  -->>
