--- a/views/homepage.html
+++ b/views/homepage.html
@@ -6,7 +6,7 @@
     <link href="css/homepage.css" rel="stylesheet" type="text/css">
     <title>Website4MyMomsBusiness</title>
 </head>
-<body>
+<body class="mainn">
     <div>
 
         <header>
