--- a/views/homepage.html
+++ b/views/homepage.html
@@ -13,12 +13,12 @@
             <img class="logo" src="imgs/sdwlogo.png" alt="logo">
             <nav>
                 <ul class="navlink">
+                    <li><a href="/homepage">Homepage</a></li>
                     <li><a href="/store">Stores</a></li>
-                    <li><a href="#">Projects</a></li>
-                    <li><a href="/contactus">Contact Us</a></li>
+                    <li><a href="/terms">Terms&Privacy</a></li>
                 </ul>
             </nav>
-            <a class="cta" href="#"><button>Contact</button></a>
+            <a class="cta" href="/contactus"><button>About & Contact</button></a>
         </header>
         <div class="mainpage">
 
@@ -27,8 +27,9 @@
                 <p>Client's Happiness Is Our Goal</p>
             </div>
             <div class="mainpage3">
-                <p>We are sending and delivering our products to every towns in Myanmar. 
-                Contact us fast and we will transfer our products to every clients whitin a week. </p>
+                <h1>Buying more than 1,000,000 Forever Living Products cost will be off 10% of the  price.</h1>
+                <h3>We are sending and delivering our products to every town in Myanmar. 
+                    Please contact us fast; we will transfer our products to every client within a week.</h3>
             </div>
             
             <!--TODO  -->>
