--- a/views/homepage.html
+++ b/views/homepage.html
@@ -25,8 +25,10 @@
             <div class="mainpage2">
                 <img class="dttimg" src="imgs/dtt.png">
                 <p>Client's Happiness Is Our Goal</p>
+                
             </div>
             <div class="mainpage3">
+                <div id="borderleft"></div>
                 <h1>Buying more than 1,000,000 Forever Living Products cost will be off 10% of the  price.</h1>
                 <h3>We are sending and delivering our products to every town in Myanmar. 
                     Please contact us fast; we will transfer our products to every client within a week.</h3>
