--- a/views/homepage.html
+++ b/views/homepage.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/main.css" type="text/css">
     <link href="css/homepage.css" rel="stylesheet" type="text/css">
     <title>Website4MyMomsBusiness</title>
 </head>
@@ -13,31 +14,32 @@
             <img class="logo" src="imgs/sdwlogo.png" alt="logo">
             <nav>
                 <ul class="navlink">
-                    <li><a href="/homepage">Homepage</a></li>
+                    <li><a href="/">Homepage</a></li>
                     <li><a href="/store">Stores</a></li>
                     <li><a href="/terms">Terms & Privacy</a></li>
                 </ul>
             </nav>
             <a class="cta" href="/contactus"><button>About & Contact</button></a>
         </header>
-        <div class="mainpage">
-
-            <div class="mainpage2">
-                <img class="dttimg" src="imgs/dtt.png">
-                <p>Client's Happiness Is Our Goal</p>
-                
-            </div>
-            <div class="mainpage3">
-                <div id="borderleft"></div>
-                <h1>Buying more than 1,000,000 Forever Living Products cost will be off 10% of the  price.</h1>
-                <h3>We are sending and delivering our products to every town in Myanmar. 
-                    Please contact us fast; we will transfer our products to every client within a week.</h3>
-            </div>
-            
-            <!--TODO  -->>
-        </div>
+        
     </div>
     
     
+    <div class="mainpage">
+
+        <div class="mainpage2">
+            <img class="dttimg" src="imgs/dtt.png">
+            <p>Client's Happiness Is Our Goal</p>
+            
+        </div>
+        <div class="mainpage3">
+            <div id="borderleft"></div>
+            <h1>Buying more than 1,000,000 Forever Living Products cost will be off 10% of the  price.</h1>
+            <h3>We are sending and delivering our products to every town in Myanmar. 
+                Please contact us fast; we will transfer our products to every client within a week.</h3>
+        </div>
+        
+        <!--TODO  -->>
+    </div>
 </body>
 </html>
