--- a/views/items.ejs
+++ b/views/items.ejs
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css" type="text/css">
-    <title>Contact Us</title>
+    <link href="css/homepage.css" rel="stylesheet" type="text/css">
+    <title>Website4MyMomsBusiness</title>
 </head>
 <body class="mainn">
     <div>
