--- a/views/terms.html
+++ b/views/terms.html
@@ -1,1 +1,28 @@
-items
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/main.css" type="text/css">
+    <title>Terms</title>
+</head>
+<body class="mainn">
+    <div>
+
+        <header>
+            <img class="logo" src="imgs/sdwlogo.png" alt="logo">
+            <nav>
+                <ul class="navlink">
+                    <li><a href="/">Homepage</a></li>
+                    <li><a href="/store">Stores</a></li>
+                    <li><a href="/terms">Terms & Privacy</a></li>
+                </ul>
+            </nav>
+            <a class="cta" href="/contactus"><button>About & Contact</button></a>
+        </header>
+        
+    </div>
+    
+    
+</body>
+</html>
