--- a/views/homepage.html
+++ b/views/homepage.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/main.css" type="text/css">
+    <link rel="stylesheet" href="css/header.css" type="text/css">
     <link href="css/homepage.css" rel="stylesheet" type="text/css">
-    <title>Website4MyMomsBusiness</title>
+    <title></title>
 </head>
 <body class="mainn">
     <div>
@@ -14,7 +14,7 @@
             <img class="logo" src="imgs/sdwlogo.png" alt="logo">
             <nav>
                 <ul class="navlink">
-                    <li><a href="/">Homepage</a></li>
+                    <li><a href="/homepage">Homepage</a></li>
                     <li><a href="/store">Stores</a></li>
                     <li><a href="/terms">Terms & Privacy</a></li>
                 </ul>
@@ -30,8 +30,8 @@
         <div class="mainpage2">
             <img class="dttimg" src="imgs/dtt.png">
             <p>Client's Happiness Is Our Goal</p>
-            
         </div>
+
         <div class="mainpage3">
             <div id="borderleft"></div>
             <h1>Buying more than 1,000,000 Forever Living Products cost will be off 10% of the  price.</h1>
@@ -40,6 +40,14 @@
         </div>
         
         <!--TODO  -->>
+    </div>
+    <div>
+        <footer>
+            <div class="footer1"></div>
+            <div class="footer2"></div>
+            <div class="footer3"></div>
+            <p>Copyright@ 2023-2024</p>
+        </footer>
     </div>
 </body>
 </html>
