--- a/views/homepage.html
+++ b/views/homepage.html
@@ -69,7 +69,7 @@
                     <button type="submit">Subscribe</button>
                 </font>
 
-                <ul class="">
+                <ul class="icons">
                     <li><i class="fa-brands fa-facebook fa-beat"></i></li>
                     <li><i class="fa-brands fa-facebook-messenger fa-beat"></i></li>
                     <li><i class="fa-solid fa-envelope fa-beat"></i></li>
