--- a/views/homepage.html
+++ b/views/homepage.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/header.css" type="text/css">
     <link href="css/homepage.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="css/main.css">
     <script src="https://kit.fontawesome.com/ef09da54b9.js" crossorigin="anonymous"></script>
     <title></title>
 </head>
@@ -69,7 +70,7 @@
                     <button type="submit">Subscribe</button>
                 </font>
 
-                <ul class="">
+                <ul class="icons">
                     <li><i class="fa-brands fa-facebook fa-beat"></i></li>
                     <li><i class="fa-brands fa-facebook-messenger fa-beat"></i></li>
                     <li><i class="fa-solid fa-envelope fa-beat"></i></li>
