--- a/views/homepage.html
+++ b/views/homepage.html
@@ -43,7 +43,7 @@
         
         <!--TODO  -->>
     </div>
-    <div>
+    <div class="footerclass">
         <footer>
             <div class="footer1">
                 <h1>ShweDuWun</h1>
@@ -72,12 +72,14 @@
 
                 <ul class="icons">
                     <li><i class="fa-brands fa-facebook fa-beat"></i></li>
-                    <li><i class="fa-brands fa-facebook-messenger fa-beat"></i></li>
-                    <li><i class="fa-solid fa-envelope fa-beat"></i></li>
-                    <li><i class="fa-brands fa-youtube fa-beat"></i></li>
+                    <li><i class="fa-brands fa-facebook-messenger fa-fade"></i></li>
+                    <li><i class="fa-solid fa-envelope fa-flip"></i></li>
+                    <li><i class="fa-brands fa-youtube fa-bounce"></i></li>
                 </ul>
             </div>
-            <p>Copyright@ 2023-2024</p>
+            <div class="footer4">
+               <h4>Copyright@ 2023-2024</h4>
+            </div>
         </footer>
     </div>
 </body>
