fixed some bugs

--- a/views/contactus.html
+++ b/views/contactus.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/main.css" type="text/css">
+    <link rel="stylesheet" href="css/header.css" type="text/css">
     <title>Contact Us</title>
 </head>
 <body class="mainn">
@@ -15,7 +15,7 @@
                 <ul class="navlink">
                     <li><a href="/">Homepage</a></li>
                     <li><a href="/store">Stores</a></li>
-                    <li><a href="/terms">Terms & Privacy</a></li>
+                    <li><a href="/delivery">Terms & Privacy</a></li>
                 </ul>
             </nav>
             <a class="cta" href="/contactus"><button>About & Contact</button></a>
