--- a/views/homepage.html
+++ b/views/homepage.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/header.css" type="text/css">
     <link href="css/homepage.css" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/header.css">
     <script src="https://kit.fontawesome.com/ef09da54b9.js" crossorigin="anonymous"></script>
-    <title></title>
+    <title>Home-ShweDuWun</title>
 </head>
 <body class="mainn">
     <div>
@@ -16,7 +16,7 @@
             <img class="logo" src="imgs/sdwlogo.png" alt="logo">
             <nav>
                 <ul class="navlink">
-                    <li><a href="/homepage">Homepage</a></li>
+                    <li><a href="/">Homepage</a></li>
                     <li><a href="/store">Stores</a></li>
                     <li><a href="/delivery">Services</a></li>
                 </ul>
