--- a/views/items.ejs
+++ b/views/items.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/header.css" type="text/css">
     <link href="css/homepage.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="css/items.css" type="text/css">
     <title>Website4MyMomsBusiness</title>
 </head>
 <body class="mainn">
@@ -23,7 +24,15 @@
         </header>
         
     </div>
-    
+    <section>
+        <div id="left">
+            <img src="imgs/drug.png" alt="">
+            <p>1500MMK</p>
+        </div>
+        <div id="right">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint nobis impedit saepe aut a nulla, aliquam dolorum voluptas necessitatibus quos, quidem eius ab! Nisi sapiente debitis culpa id molestiae veritatis. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi, fugiat. Provident, non placeat. Magnam fugit praesentium eligendi ullam voluptatibus fugiat consequuntur laboriosam, aliquam atque! Incidunt, quaerat. Amet obcaecati vero magni.</p>
+        </div>
+    </section>
     
 </body>
 </html>
