--- a/views/items.ejs
+++ b/views/items.ejs
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/header.css" type="text/css">
-    <link href="css/homepage.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="css/items.css" type="text/css">
+    <script src="https://kit.fontawesome.com/ef09da54b9.js" crossorigin="anonymous"></script>
     <title>Website4MyMomsBusiness</title>
 </head>
 <body class="mainn">
@@ -33,6 +33,44 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint nobis impedit saepe aut a nulla, aliquam dolorum voluptas necessitatibus quos, quidem eius ab! Nisi sapiente debitis culpa id molestiae veritatis. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi, fugiat. Provident, non placeat. Magnam fugit praesentium eligendi ullam voluptatibus fugiat consequuntur laboriosam, aliquam atque! Incidunt, quaerat. Amet obcaecati vero magni.</p>
         </div>
     </section>
-    
+    <div class="footerclass">
+        <footer>
+            <div class="footer1">
+                <h1>ShweDuWun</h1>
+                <br>
+                <h3>Medical Product Distributor</h3>
+            </div>
+
+            <div class="footer2">
+                <ul>
+                    <li><a href="#">Pages</a></li>
+                    <br>
+                    <li><a href="#">stores</a></li>
+                    <li><a href="#">services</a></li>
+                    <li><a href="#">about</a></li>
+                    <li><a href="#">contact</a></li>
+                    <br>
+                    <li><a href="#">Contact2WebsiteDevelopers</a></li>
+                </ul>
+            </div>
+            <div class="footer3">
+                <font>
+                    <input type="email" required placeholder="Type your Email...">
+                    <br>
+                    <button type="submit">Subscribe</button>
+                </font>
+
+                <ul class="icons">
+                    <li><i class="fa-brands fa-facebook fa-beat"></i></li>
+                    <li><i class="fa-brands fa-facebook-messenger fa-fade"></i></li>
+                    <li><i class="fa-solid fa-envelope fa-flip"></i></li>
+                    <li><i class="fa-brands fa-youtube fa-bounce"></i></li>
+                </ul>
+            </div>
+            <div class="footer4">
+               <h4>Copyright@ 2023-2024</h4>
+            </div>
+        </footer>
+    </div>
 </body>
 </html>
