--- a/public/css/header.css
+++ b/public/css/header.css
@@ -9,7 +9,7 @@
     padding: 0;
 }
 
-.mainn{
+body{
     background-image: url("../imgs/69.jpg");
     background-size: 1550px 1100px;
     background-position: center;
