--- a/views/card.html
+++ b/views/card.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/header.css" type="text/css">
+    <link rel="stylesheet" href="css/card.css" type="text/css">
     <script src="https://kit.fontawesome.com/ef09da54b9.js" crossorigin="anonymous"></script>
-    <title>Delivery</title>
+    <title>Card</title>
 </head>
 <body class="mainn">
     <div>
@@ -14,7 +15,7 @@
             <img class="logo" src="imgs/sdwlogo.png" alt="logo">
             <nav>
                 <ul class="navlink">
-                    <li><a href="/">Homepage</a></li>
+                    <li><a href="/homepage">Homepage</a></li>
                     <li><a href="/store">Stores</a></li>
                     <li><a href="/delivery">Services</a></li>
                 </ul>
@@ -23,7 +24,13 @@
         </header>
         
     </div>
-    <a href="/services">Go to services</a>
+
+    <p>hi</p>
+    <div class="card">
+        
+    </div>
+
+
     <div class="footerclass">
         <footer>
             <div class="footer1">
