--- a/views/store.html
+++ b/views/store.html
@@ -16,7 +16,7 @@
                 <ul class="navlink">
                     <li><a href="/">Homepage</a></li>
                     <li><a href="/store">Stores</a></li>
-                    <li><a href="/delivery">Terms & Privacy</a></li>
+                    <li><a href="/delivery">Services</a></li>
                 </ul>
             </nav>
             <a class="cta" href="/contactus"><button>About & Contact</button></a>
@@ -32,6 +32,10 @@
                 <h3>Medical Product Distributor</h3>
             </div>
 
+
+
+
+            
             <div class="footer2">
                 <ul>
                     <li><a href="#">Pages</a></li>
@@ -52,10 +56,10 @@
                 </font>
 
                 <ul class="icons">
-                    <li><i class="fa-brands fa-facebook fa-beat"></i></li>
-                    <li><i class="fa-brands fa-facebook-messenger fa-fade"></i></li>
-                    <li><i class="fa-solid fa-envelope fa-flip"></i></li>
-                    <li><i class="fa-brands fa-youtube fa-bounce"></i></li>
+                    <li><a href="#"><i class="fa-brands fa-facebook fa-beat"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-facebook-messenger fa-fade"></i></a></li>
+                    <li><a href="#"><i class="fa-solid fa-envelope fa-flip"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-youtube fa-bounce"></i></a></li>
                 </ul>
             </div>
             <div class="footer4">
