--- a/views/contactus.html
+++ b/views/contactus.html
@@ -16,13 +16,14 @@
                 <ul class="navlink">
                     <li><a href="/">Homepage</a></li>
                     <li><a href="/store">Stores</a></li>
-                    <li><a href="/delivery">Terms & Privacy</a></li>
+                    <li><a href="/delivery">Services</a></li>
                 </ul>
             </nav>
             <a class="cta" href="/contactus"><button>About & Contact</button></a>
         </header>
         
     </div>
+    <a href="/contact">Go to contact</a>
     
     <div class="footerclass">
         <footer>
@@ -52,10 +53,10 @@
                 </font>
 
                 <ul class="icons">
-                    <li><i class="fa-brands fa-facebook fa-beat"></i></li>
-                    <li><i class="fa-brands fa-facebook-messenger fa-fade"></i></li>
-                    <li><i class="fa-solid fa-envelope fa-flip"></i></li>
-                    <li><i class="fa-brands fa-youtube fa-bounce"></i></li>
+                    <li><a href="#"><i class="fa-brands fa-facebook fa-beat"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-facebook-messenger fa-fade"></i></a></li>
+                    <li><a href="#"><i class="fa-solid fa-envelope fa-flip"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-youtube fa-bounce"></i></a></li>
                 </ul>
             </div>
             <div class="footer4">
