--- a/views/homepage.html
+++ b/views/homepage.html
@@ -16,7 +16,7 @@
             <img class="logo" src="imgs/sdwlogo.png" alt="logo">
             <nav>
                 <ul class="navlink">
-                    <li><a href="/">Homepage</a></li>
+                    <li><a href="homepage">Homepage</a></li>
                     <li><a href="/store">Stores</a></li>
                     <li><a href="/delivery">Services</a></li>
                 </ul>
@@ -41,8 +41,11 @@
                 Please contact us fast; we will transfer our products to every client within a week.</h3>
         </div>
         
+        
         <!--TODO  -->>
     </div>
+    <a href="/card">Card</a>
+
     <div class="footerclass">
         <footer>
             <div class="footer1">
@@ -71,10 +74,10 @@
                 </font>
 
                 <ul class="icons">
-                    <li><i class="fa-brands fa-facebook fa-beat"></i></li>
-                    <li><i class="fa-brands fa-facebook-messenger fa-fade"></i></li>
-                    <li><i class="fa-solid fa-envelope fa-flip"></i></li>
-                    <li><i class="fa-brands fa-youtube fa-bounce"></i></li>
+                    <li><a href="#"><i class="fa-brands fa-facebook fa-beat"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-facebook-messenger fa-fade"></i></a></li>
+                    <li><a href="#"><i class="fa-solid fa-envelope fa-flip"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-youtube fa-bounce"></i></a></li>
                 </ul>
             </div>
             <div class="footer4">
