--- a/views/card.html
+++ b/views/card.html
@@ -25,10 +25,16 @@
         
     </div>
 
-    <p>hi</p>
+    
     <div class="card">
+        <div class="card1">
+            <div class="pic"></div>
+            <h2>Ok nasa</h2>
+        </div>
+        <div class="card2"></div>
         
     </div>
+    
 
 
     <div class="footerclass">
