--- a/public/css/homepage.css
+++ b/public/css/homepage.css
@@ -74,3 +74,8 @@
     max-width: 90%;
     max-height: 85%;
 }
+
+
+
+
+/*TODO - Do mobile version, increase heights of div, then make 2 divs (img div and sentneces div already had in website) upper and under.*/
