--- a/public/css/header.css
+++ b/public/css/header.css
@@ -174,7 +174,11 @@ footer{
     border-top: 4px solid black;
 }
 
-@media only screen and (max-width: 700px){
+
+
+
+
+@media only screen and (max-width: 480px){
     header{
         width: 100%;
         top: 70px;
@@ -209,25 +213,28 @@ footer{
         height: 50%;
         float: right;
         padding-top: 10px;
+        padding-bottom: 7px;
     }
     .footer2 li{
-        padding: 5px 0 0 4%;
+        padding: 5px 0 0 3%;
         font-weight: 600;
         border-left: 2px solid aqua;
+        border-right: none;
     }
     .footer2 li a{
         font-size: 15px;
         color: black;
         text-decoration: none;
-        padding: 1% 0 0 0;
     }
     .footer3{
         width: 100%;
+        height: 40%;
         display: inline-block;
         float: none;
-        padding: 2% 5%;
+        padding: 2% 5%; 
+    }
+    .footer3 font{
         border-top: 4px solid black;
-        
     }
     .footer3 font input{
         padding: 2% 150px 2% 10px;
@@ -257,6 +264,19 @@ footer{
     .icons li{
         padding: 1% 20px 0;
     }
+    .footer4{
+        float: left;
+        height: 10%;
+        width: inherit;
+        padding: 2px 20% 0;
+        text-align: center;
+    }
+    .footer4 h4{
+        padding-top: 10px;
+        border-top: 4px solid black;
+    }
+    /*TODO - fix the footer in mobile resposive,
+    Also do header*/
 
 
 }
