--- a/views/homepage.html
+++ b/views/homepage.html
@@ -63,7 +63,7 @@
                     <li><a href="#">about</a></li>
                     <li><a href="#">contact</a></li>
                     <br>
-                    <li><a href="#">Contact2WebsiteDevelopers</a></li>
+                    <li id="smallertext"><a href="#">Contact2WebsiteDevelopers</a></li>
                 </ul>
             </div>
             <div class="footer3">
