--- a/views/card.html
+++ b/views/card.html
@@ -15,7 +15,7 @@
             <img class="logo" src="imgs/sdwlogo.png" alt="logo">
             <nav>
                 <ul class="navlink">
-                    <li><a href="/homepage">Homepage</a></li>
+                    <li><a href="/">Homepage</a></li>
                     <li><a href="/store">Stores</a></li>
                     <li><a href="/delivery">Services</a></li>
                 </ul>
