--- a/views/homepage.html
+++ b/views/homepage.html
@@ -14,19 +14,19 @@
 
         <header>
             <img class="logo" src="imgs/sdwlogo.png" alt="logo">
-            <nav>
+            <nav><!--TODO make this navigation responsive first-->
                 <ul class="navlink">
-                    <li><a href="homepage">Homepage</a></li>
+                    <li><a href="/">Homepage</a></li>
                     <li><a href="/store">Stores</a></li>
                     <li><a href="/delivery">Services</a></li>
                 </ul>
             </nav>
             <a class="cta" href="/contactus"><button>About & Contact</button></a>
         </header>
-        
+
     </div>
-    
-    
+
+
     <div class="mainpage">
 
         <div class="mainpage2">
@@ -37,12 +37,12 @@
         <div class="mainpage3">
             <div id="borderleft"></div>
             <h1>Buying more than 1,000,000 Forever Living Products cost will be off 10% of the  price.</h1>
-            <h3>We are sending and delivering our products to every town in Myanmar. 
+            <h3>We are sending and delivering our products to every town in Myanmar.
                 Please contact us fast; we will transfer our products to every client within a week.</h3>
         </div>
-        
-        
-        <!--TODO  -->>
+
+
+        <!--TODO  -->
     </div>
     <a href="/card">Card</a>
 
